<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_books"
            android:title="@string/books" />
        <item
            android:id="@+id/nav_libraryofficials"
            android:title="@string/library_officials"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>
