<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59DF20">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:radius="8dp">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1128dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/about_us"
            android:textColor="#080808"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewVisionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/vision"
            android:textColor="#080808"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewVision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/alegreya_sans_sc_italic"
            android:text="@string/vision_in_support_to_the_college_mission_the_library_service_will_provide_information_resources_and_service_in_cooperation_with_the_academic_departments_and_faculty_with_clear_focus_on_student_learning_as_well_as_in_the_community_where_people_and_ideas_intereact_to_expand_learning_and_to_facilitate_the_creation_of_new_knowledge"
            android:textColor="#070000"
            android:textSize="10sp"
            tools:ignore="SmallSp,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textViewMissionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/mission"
            android:textColor="#080808"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/the_cpc_library_services_serves_as_the_repository_material_of_both_print_and_non_print_informational_resources_to_provide_service_and_facilities_which_support_the_different_programs_of_the_college_it_also_contributes_to_the_academic_success_growth_and_development_of_students_through_teaching_and_by_promoting_information_literacy"
            android:textColor="#000000"
            android:textSize="10sp"
            android:fontFamily="@font/alegreya_sans_sc_italic"
            tools:ignore="SmallSp,VisualLintLongText" />

        <TextView
            android:id="@+id/textViewObjectivesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/objectives"
            android:textColor="#080808"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewObjectives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objectives_text"
            android:textColor="#050000"
            android:textSize="11sp"
            android:fontFamily="@font/alegreya_sans_sc_italic"
            tools:ignore="VisualLintLongText" />


    </LinearLayout>

</RelativeLayout>
